[gd_scene load_steps=6 format=3 uid="uid://cfllmawvoim2g"]

[ext_resource type="Script" uid="uid://dn36cfy0kvkma" path="res://Scripts/jump_pack_refresh_script.gd" id="1_mqtto"]
[ext_resource type="Texture2D" uid="uid://c8wmu7ckusgna" path="res://resources/Sprites/JetpackRefreshIcon.png" id="2_6crff"]
[ext_resource type="Script" uid="uid://cfnotqwi0ab8h" path="res://Scripts/interaction_area2D.gd" id="3_7rdrh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t2f87"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ty2of"]
size = Vector2(21, 25)

[node name="JumpPackRefresh" type="StaticBody2D"]
script = ExtResource("1_mqtto")

[node name="BaseCollShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_t2f87")
disabled = true

[node name="MainSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_6crff")

[node name="InteractionArea2D" type="Area2D" parent="."]
script = ExtResource("3_7rdrh")
metadata/_custom_type_script = "uid://cfnotqwi0ab8h"

[node name="InteractionCollShape" type="CollisionShape2D" parent="InteractionArea2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ty2of")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
